Security-manager working for :compiler:tests-common-new:test